[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[options]
package_dir = "ai_url_aggregator"
packages = ["ai_url_aggregator"]

[project]
name = "ai_url_aggregator"
version = "0.1"
authors = [
    {name = "Carlos A. Planchón", email = "carlosandresplanchonprestes@gmail.com"}
]
description = "Tool that uses Perplexity and OpenAI to search with SERP and filter for relevant URLs."
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
]
license = {text = "MIT License"}
keywords = ["openai", "url", "research", "grabber"]
readme = "README.md"
dependencies=[
    "openai",
    "requests"
]

[project.urls]
repository = "https://github.com/carlosplanchon/ai_url_aggregator.git"
